rest api method for signature verification, JUnit test for it